change fom mint

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -389,7 +389,8 @@
   <!-- Next Steps -->
   <h2>Next Steps</h2>
   <h2>A change from Arch</h2>
-  <p>What do you want to do next with your app?</p>
+  <h2>A change from Mint</h2>
+    <p>What do you want to do next with your app?</p>
 
   <input type="hidden" #selection>
 
