--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,7 +1,17 @@
 <label>Server Name </label>
 <input type="text" class="form-control" (input)="onUpdateServer($event)">
-<p>{{serverName}}</p>
+<input type="text" class="form-control" [(ngModel)]="serverName">
+<!--<p>{{serverName}}</p>-->
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add server</button>
 <p>{{serverCreationStatus}}</p>
 <app-server></app-server>
 <app-server></app-server>
+
+
+<hr>
+<hr>
+<hr>
+
+<input type="text" class="form-control" [(ngModel)]="username">
+<p>{{username}}</p>
+<button [disabled]="username == ''" (click)="username = ''" class="btn btn-danger">Reset username</button>
