--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>The server with ID {{severId}} is {{getServerStatus()}}</p>
+<p [ngStyle]="{backgroundColor: getColor()}" [ngClass]="">The server with ID {{severId}} is {{getServerStatus()}}</p>
